--- a/day_7/index.html
+++ b/day_7/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     
-    <script src="../day_7/index.js"></script>
+    <script src="../day_7/index.js" type="module"></script>
 </body>
 </html>
