resolve users array localStorage

--- a/day_10/index.html
+++ b/day_10/index.html
@@ -29,11 +29,11 @@
         </span>
       </div>
       <div class="chat__messages">
-        <div class="chat__first-user">
+        <!-- <div class="chat__first-user">
           <span class="chat__message chat__message_first">
             my message is bigger
           </span>
-        </div>
+        </div> -->
         <!-- <div class="chat__second-user">
           <span class="chat__message chat__message_second">
             my message
